--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,12 +5,12 @@
 
 idf_component_register(
     SRCS
-       
+        "detection_responder.cc"
         "image_provider.cc"
         "main.cc"
-       
+        "main_functions.cc"       
         "model_settings.cc"
-       
+        "object_detection_model.cc"
         "app_camera_esp.c"
         "esp_cli.c"
 
