chore: Update project name to "object_detection"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,4 @@ if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/sdkconfig)
     add_bsp("${SDKCONFIG_RULE}" "TFLITE_USE_BSP_KALUGA" "esp32s2")
 endif()
 
-project(person_detection)
+project(object_detection)
